tests/snapshots/sfc/js/patches__arrow_function_with_typed_parameters_in_template.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue";
import { ref } from "vue";
export default {
  __name: "test",
  setup(__props) {
    const items = ref([
      1,
      2,
      3
    ]);
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        "\n    " + _toDisplayString(items.filter((x) => x > 1)) + "\n  ",
        1
        /* TEXT */
);
    };
  }
};
