tests/snapshots/sfc/js/patches__await_in_string_literal_should_not_trigger_async.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue";
const message = "please await for response";
const code = "await is a keyword";
export default {
  __name: "test",
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", null, _toDisplayString(message));
    };
  }
};
